[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/NativeLib/MainUI.gd" type="Script" id=1]
[ext_resource path="res://addons/NativeLib/icons/glass.svg" type="Texture" id=2]
[ext_resource path="res://addons/NativeLib/icons/android.svg" type="Texture" id=3]
[ext_resource path="res://addons/NativeLib/icons/apple_logo.svg" type="Texture" id=4]
[ext_resource path="res://addons/NativeLib/icons/reload.svg" type="Texture" id=5]
[ext_resource path="res://addons/NativeLib/icons/download.svg" type="Texture" id=6]
[ext_resource path="res://addons/NativeLib/icons/universal_platform.svg" type="Texture" id=7]

[node name="MainUI" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="view" type="VBoxContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 716.0
margin_bottom = 1276.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="top" type="HBoxContainer" parent="view"]
margin_right = 712.0
margin_bottom = 26.0
size_flags_horizontal = 3
custom_constants/separation = 4

[node name="SearchLineEdit" type="LineEdit" parent="view/top"]
margin_right = 464.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3
right_icon = ExtResource( 2 )
placeholder_text = "Search"
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="view/top"]
margin_left = 468.0
margin_top = 6.0
margin_right = 582.0
margin_bottom = 20.0
text = "Filter by platform:"

[node name="FilterUniversal" type="CheckBox" parent="view/top"]
margin_left = 586.0
margin_right = 626.0
margin_bottom = 26.0
hint_tooltip = "Show plugins for universal platform."
icon = ExtResource( 7 )

[node name="FilterAndroid" type="CheckBox" parent="view/top"]
margin_left = 630.0
margin_right = 669.0
margin_bottom = 26.0
hint_tooltip = "Show plugins for Android platform."
icon = ExtResource( 3 )

[node name="FilterIOS" type="CheckBox" parent="view/top"]
margin_left = 673.0
margin_right = 712.0
margin_bottom = 26.0
hint_tooltip = "Show plugins for iOS platform."
icon = ExtResource( 4 )

[node name="panel" type="Panel" parent="view"]
margin_top = 30.0
margin_right = 712.0
margin_bottom = 1228.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="scroll" type="ScrollContainer" parent="view/panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="margin" type="MarginContainer" parent="view/panel/scroll"]
margin_right = 712.0
margin_bottom = 1198.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="list" type="VBoxContainer" parent="view/panel/scroll/margin"]
margin_left = 4.0
margin_top = 4.0
margin_right = 708.0
margin_bottom = 1194.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 16

[node name="status" type="HBoxContainer" parent="view"]
margin_top = 1232.0
margin_right = 712.0
margin_bottom = 1272.0
custom_constants/separation = 4

[node name="info" type="Label" parent="view/status"]
margin_top = 13.0
margin_right = 329.0
margin_bottom = 27.0
size_flags_horizontal = 3

[node name="AndroidButton" type="CheckButton" parent="view/status"]
margin_left = 333.0
margin_right = 424.0
margin_bottom = 40.0
hint_tooltip = "Enable Android for project"
icon = ExtResource( 3 )

[node name="iOSButton" type="CheckButton" parent="view/status"]
margin_left = 428.0
margin_right = 519.0
margin_bottom = 40.0
hint_tooltip = "Enable iOS for project"
icon = ExtResource( 4 )

[node name="system" type="Label" parent="view/status"]
margin_left = 523.0
margin_top = 13.0
margin_right = 523.0
margin_bottom = 27.0

[node name="InstallSystemButton" type="Button" parent="view/status"]
margin_left = 527.0
margin_right = 644.0
margin_bottom = 40.0
hint_tooltip = "Install local copy of NativeLib-CLI utility."
text = "NativeLib-CLI"
icon = ExtResource( 6 )

[node name="UpdateSystemButton" type="Button" parent="view/status"]
visible = false
margin_left = 479.0
margin_right = 601.0
margin_bottom = 24.0
hint_tooltip = "Update local copy of NativeLib-CLI utility."
text = "NativeLib-CLI"
icon = ExtResource( 5 )

[node name="UpdateRepoButton" type="Button" parent="view/status"]
margin_left = 648.0
margin_right = 712.0
margin_bottom = 40.0
hint_tooltip = "Fetch info about all available plugins and store it in your local repository."
text = "REPO"
icon = ExtResource( 5 )
[connection signal="text_changed" from="view/top/SearchLineEdit" to="." method="_on_SearchLineEdit_text_changed"]
[connection signal="toggled" from="view/top/FilterUniversal" to="." method="_on_FilterUniversal_toggled"]
[connection signal="toggled" from="view/top/FilterAndroid" to="." method="_on_FilterAndroid_toggled"]
[connection signal="toggled" from="view/top/FilterIOS" to="." method="_on_FilterIOS_toggled"]
[connection signal="toggled" from="view/status/AndroidButton" to="." method="_on_AndroidButton_toggled"]
[connection signal="toggled" from="view/status/iOSButton" to="." method="_on_iOSButton_toggled"]
[connection signal="pressed" from="view/status/InstallSystemButton" to="." method="_on_InstallSystemButton_pressed"]
[connection signal="pressed" from="view/status/UpdateSystemButton" to="." method="_on_UpdateSystemButton_pressed"]
[connection signal="pressed" from="view/status/UpdateRepoButton" to="." method="_on_UpdateRepoButton_pressed"]
